# full-stack-scaffolding-fastapi-nuxt4

./: .env.example  .env.production.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: backend-rules.md  frontend-rules.md  workflow-rules.md
.cursor/rules/: backend-guidelines.mdc  fastapi-backend-guidelines.mdc  frontend-guidelines.mdc  nuxt-frontend-guidelines.mdc  workflow-guardrails.mdc
backend/: .env.example  .env.production.example  CONTRIBUTING.md  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2025-01-19_add_rbac_tables.py  2025-07-03_create_user_and_password_reset_token_.py  2025-07-08_add_timestamps_to_users_and_password_.py  2025-07-18_add_is_system_field_to_permissions.py  2025-09-08_initial_data.py  2025-09-08_initial_database_schema.py
backend/scripts/: bootstrap.py
backend/src/: cache.py  celery_app.py  config.py  database.py  exceptions.py  main.py  middleware.py  pagination.py  rate_limit.py  redis.py  redis_client.py  schemas.py  utils.py
backend/src/auth/: blacklist.py  constants.py  dependencies.py  email.py  exceptions.py  models.py  router.py  schemas.py  security.py  service.py  tasks.py  utils.py
backend/src/rbac/: __init__.py  dependencies.py  exceptions.py  init_data.py  models.py  router.py  schemas.py  service.py
backend/src/users/: dependencies.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  setup_test_db.py  test_auth_flow.py  test_user_admin_api.py
docs/: CONFIGURATION.md  FDD_TEMPLATE.md  GITLAB_CI_VARIABLES.md  MODULAR_DEVELOPMENT.md  PERMISSION_MANAGEMENT.md  WORKFLOW.md  adr-001-rbac-permission-models.md  backend-architecture.md  dynamic-rbac-guide.md  fdd-001-user-auth.md  frontend-architecture.md  rbac-workflow-guide.md
frontend/: .env.example  CODING_GUIDE.md  CONTRIBUTING.md  Dockerfile  NUXT4_UPGRADE_SUMMARY.md  auth.d.ts  nuxt.config.ts  nuxt4-upgrade-checklist.md  package.json  tsconfig.json
frontend/app/: app.config.ts  app.vue  error.vue
frontend/app/assets/css/: main.css
frontend/app/components/: ConfirmModal.vue  PermissionGuard.vue
frontend/app/composables/: useApi.ts  useCharts.ts  usePermissions.ts
frontend/app/layouts/: default.vue
frontend/app/middleware/: error-handler.global.ts  route-guard.global.ts
frontend/app/pages/: 401.vue  403.vue  charts.vue  dashboard.vue  dev-test.vue  index.vue  profile.vue  settings.vue
frontend/app/plugins/: auth-init.client.ts  confirm.client.ts  error-handler.client.ts  pinia-persistedstate.ts
frontend/app/utils/: token.ts
frontend/config/: api-auth.ts  permissions.ts  routes.ts
frontend/layers/auth/: nuxt.config.ts
frontend/layers/auth/composables/: useAuthApi.ts
frontend/layers/auth/layouts/: auth.vue
frontend/layers/auth/pages/: login.vue  register.vue  request-password-reset.vue  reset-password.vue
frontend/layers/auth/stores/: user.ts
frontend/layers/rbac/: nuxt.config.ts
frontend/layers/rbac/components/: PermissionDetail.vue  PermissionForm.vue  RoleDetail.vue  RoleForm.vue
frontend/layers/rbac/composables/: useRbacApi.ts
frontend/layers/rbac/types/: index.ts
frontend/layers/rbac/utils/: permissions.ts
frontend/layers/ui-kit/: nuxt.config.ts
frontend/layers/users/: nuxt.config.ts
frontend/layers/users/components/: UserDetail.vue  UserForm.vue
frontend/scripts/: test-nuxt4-upgrade.js
frontend/stores/: permissions.ts
frontend/types/: auth-utils.d.ts  auth.ts  common.ts  global.d.ts  index.ts  next-auth.d.ts  permissions.ts  plugins.d.ts  user.ts
scripts/: check-env.ts  cleanup-docker.ts  deploy-production.sh  deploy-production.ts
(+21 files in other folders)
