[project]
name = "fastapi-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shrek Wang", email = "shrek.wang@example.com"},
]
dependencies = [
    "fastapi>=0.113.1",
    "uvicorn>=0.30.5",
    "pydantic[email]>=2.9.1",
    "pydantic-settings>=2.4.1",
    "sqlalchemy>=2.0.33",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "celery>=5.4.0",
    "redis>=5.1.1",
    "flower>=2.0.1",
    "langchain>=0.3.4",
    "asyncpg>=0.30.0",
    "aiosmtplib>=4.0.1",
    "jinja2>=3.1.6",
    "libpass[bcrypt]>=1.9.1.post0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dotenv]
path = "../.env"

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
    "greenlet>=3.2.3",
    "aiosqlite>=0.21.0",
]
